After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 658008 - Centered text alignment in GtkAssistant is wrong
Centered text alignment in GtkAssistant is wrong
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: Widget: Other
unspecified
Other Linux
: High major
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-09-01 20:21 UTC by Alexandre Prokoudine
Modified: 2011-09-04 04:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot to illustrate the issue (30.88 KB, image/png)
2011-09-01 20:22 UTC, Alexandre Prokoudine
  Details
assistant: Don't center page names (1.13 KB, patch)
2011-09-02 14:59 UTC, Bastien Nocera
rejected Details | Review
GtkAssistant: Fix label alignment (1.66 KB, patch)
2011-09-04 04:42 UTC, Matthias Clasen
committed Details | Review

Description Alexandre Prokoudine 2011-09-01 20:21:46 UTC
The GtkAssistant in GTK+3 has text in the list of stages in GtkAssistant centered (see attached screenshot). According to Richard Hughes of GNOME Color Manager  fame this is a design decision. If it is, then pretty please revisit this decision. Centered text in lists is really bad design.
Comment 1 Alexandre Prokoudine 2011-09-01 20:22:27 UTC
Created attachment 195440 [details]
screenshot to illustrate the issue
Comment 2 Hylke Bons 2011-09-01 21:18:03 UTC
I agree with Alexandre. Not only is it harder to read, it draws away attention from the page.
Comment 3 Emmanuele Bassi (:ebassi) 2011-09-02 10:08:16 UTC
Hylke, don't play with the bugzilla fields :-p

NEEDINFO is for maintainers to set to ask additional information to the reporter.

the critical is generally for crashers.
Comment 4 Emmanuele Bassi (:ebassi) 2011-09-02 10:09:43 UTC
since it's a UI design issue, let's add the ui-review keyword
Comment 5 Hylke Bons 2011-09-02 10:12:00 UTC
(In reply to comment #3)
> Hylke, don't play with the bugzilla fields :-p
> 
> NEEDINFO is for maintainers to set to ask additional information to the
> reporter.
> 
> the critical is generally for crashers.

I did not realise I changed anything. Sorry in that case.
Comment 6 Bastien Nocera 2011-09-02 14:59:08 UTC
Created attachment 195486 [details] [review]
assistant: Don't center page names
Comment 7 Bastien Nocera 2011-09-02 14:59:47 UTC
And it doesn't need ui-review, we already got it in comment 2.
Comment 8 Matthias Clasen 2011-09-02 15:04:49 UTC
Review of attachment 195486 [details] [review]:

GtkMisc is obsolescent. Please use GtkWidget::halign
Comment 9 Bastien Nocera 2011-09-02 15:12:41 UTC
(In reply to comment #8)
> Review of attachment 195486 [details] [review]:
> 
> GtkMisc is obsolescent. Please use GtkWidget::halign

In which case the patch isn't right, and GtkWidget::halign is broken, seeing as it's already set:
http://git.gnome.org/browse/gtk+/tree/gtk/gtkassistant.c#n1613
Comment 10 Matthias Clasen 2011-09-04 04:42:26 UTC
Sorry, I was wrong here.
Comment 11 Matthias Clasen 2011-09-04 04:42:55 UTC
The following fix has been pushed:
41dbd20 GtkAssistant: Fix label alignment
Comment 12 Matthias Clasen 2011-09-04 04:42:57 UTC
Created attachment 195609 [details] [review]
GtkAssistant: Fix label alignment

Make page titles left-aligned again. Changing from misc alignment
to GtkWidget::halign here was a mistake. We can't do that for labels
in a size group, as long as labels still pay attention to misc
alignment.